samples/_failures_safe/1761512060_3d9ed3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7331a4a2.c: In function ‘main’:
./samples/SAFE/__tmp_7331a4a2.c:162: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7331a4a2.c:161:5: error: expected declaration or statement at end of input
  161 |     if
      |     ^~
